/*
 * Copyright (c) 2016 Carmen Alvarez
 *
 * This file is part of Poet Assistant.
 *
 * Poet Assistant is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Poet Assistant is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Poet Assistant.  If not, see <http://www.gnu.org/licenses/>.
 */

package ca.rmen.android.poetassistant.main.dictionaries;

import android.support.annotation.WorkerThread;

public abstract class ResultListSharer {
    public static class ShareInfo {
        public final String title;
        public final CharSequence content;

        public ShareInfo(String title, CharSequence content) {
            this.title = title;
            this.content = content;
        }

        @Override
        public String toString() {
            return "ShareInfo{" +
                    "title='" + title + '\'' +
                    ", content=" + content +
                    '}';
        }
    }

    @WorkerThread
    public abstract ShareInfo getHtmlShareInfo(String word, String filter);
}
